<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Skippy Secure</string>
    <string name="edit_message">Enter a message</string>
    <string name="click">Click</string>
    <string name="Login">Login</string>
    <string name="Setting">Setting</string>
    <string name="Location">Location</string>
    <string name="Battery">Battery</string>

    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Particle Email</string>
    <string name="prompt_password">Particle Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_guide">*Valid Particle Credentials Required</string>
    <string name="powered_by">Powered by Particle</string>
    <string name="register_question">Need a Particle Account?</string>
    <string name="register_link">Click <a href="https://login.particle.io/signup">here</a> to register</string>
    <string name="title_activity_gpslocation">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_alarm_active">AlarmActive</string>
</resources>