<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.2"
    android:background="@android:color/black"
    android:baselineAligned="false">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/login_progress">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/transparent">

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="360dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="250dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:textColorHint="@color/white"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:layout_weight="0.73" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textInputLayout2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="200dp"
                android:weightSum="1">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:textColorHint="@android:color/white"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText"
                    android:textColor="@color/white"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_weight="0.79"
                    tools:style="@android:style/Widget.Material.AutoCompleteTextView"
                    android:popupBackground="@color/blue" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/skippy2"
        android:id="@+id/imageView4"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
